--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["@babel/preset-env",
     "@babel/preset-react"],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-proposal-class-properties","transform-class-properties", "transform-object-rest-spread"]
+  
 }
