--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": ["@babel/preset-env",
     "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties", ["transform-class-properties", {"spec": true}], "transform-object-rest-spread", [
+  "plugins": [ ["transform-class-properties", {"spec": true}], 
+                "transform-object-rest-spread", [
       "@babel/plugin-proposal-class-properties",
       {
         "loose": true
